tests/fixtures/invalid/pow_list_str_dict.py
# Cannot call pow() with List[int], Str, Dict[str, int]
x = pow([1, 2, 3], "hello", {"a": 1})
